--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,7 +12,7 @@ module-margin = 2
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
-modules-right = network bluetooth audio colorscheme backlight battery
+modules-right = network bluetooth audio backlight battery
 ; tray-position = left
 
 [bar/bottom]
