kitty: change font to Fira Code @ 10pt

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -42,8 +42,8 @@ foreground #ffffff
 background #25293A
 
 window_padding_width 16
-font_family Cartograph CF
-font_size 12
+font_family Fira Code
+font_size 10
 allow_remote_control yes
 cursor_shape block
 url_style double
