--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -42,7 +42,7 @@ foreground #ffffff
 background #25293A
 
 window_padding_width 16
-font_family Fira Code
+font_family Victor Mono
 font_size 10
 allow_remote_control yes
 cursor_shape block
