--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -2,9 +2,9 @@
 monitor = ${env:MONITOR:}
 background = #00000000
 foreground = ${env:COLOR_PRIM:#FFF}
-font-1 = ${env:FONT_1:}
-font-0 = ${env:FONT_0:}
-height = ${env:BAR_HEIGHT:}
+font-0 = Victor Mono:size=11;0
+font-1 = unifont:fontformat=truetype:antialias=false:size=13;0
+height = 30
 padding = 2
 module-margin = 2
 
@@ -22,6 +22,11 @@ bottom = true
 modules-right = cpu ram consumption stamina
 modules-center = todo
 modules-left = pomodoro spotify 
+
+[module/font]
+type=custom/script
+format=fnt <label>
+exec=cat $HOME/.config/current_font_family
 
 [module/bluetooth]
 type=custom/script
@@ -169,7 +174,7 @@ interface = ${env:INTERFACE:wl0}
 
 format-connected = %{A1:kitty nmtui-connect:}net <label-connected>%{A}
 format-disconnected = %{A1:kitty nmtui-connect:}net off%{A}
-label-connected = %downspeed%
+label-connected = %downspeed% @ %essid%
 
 [module/audio]
 type = internal/pulseaudio
