vscode: enable new suggestion preview and js inlays

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -145,5 +145,11 @@
   },
   "workbench.editor.sharedViewState": true,
   "workbench.editor.untitled.experimentalLanguageDetection": true,
-  "javascript.updateImportsOnFileMove.enabled": "always"
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "editor.suggest.preview": true,
+  "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
+  "javascript.inlayHints.parameterNames.enabled": "all",
+  "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
+  "typescript.inlayHints.variableTypes.enabled": true,
+  "typescript.inlayHints.propertyDeclarationTypes.enabled": true,
 }
