polybar: use bold

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -3,7 +3,8 @@ monitor = ${env:MONITOR:}
 background = #00000000
 foreground = ${env:COLOR_PRIM:#FFF}
 font-0 = Victor Mono:size=11;0
-font-1 = unifont:fontformat=truetype:antialias=false:size=13;0
+font-1 = unifont:fontformat=truetype:size=13;0
+font-2 = Victor Mono:size=11:weight=bold;0
 height = 30
 padding = 2
 module-margin = 2
@@ -44,8 +45,9 @@ exec = cat $HOME/.config/current_color_scheme
 [module/todo]
 type = custom/script
 interval = 0.5
-format = todo <label>
-exec = echo "($(wc -l ~/todo | cut -d' ' -f1)) $(head -1 ~/todo)"
+format = %{T3}todo%{T-} <label>
+# exec = echo "($(wc -l ~/todo | cut -d' ' -f1)) $(head -1 ~/todo)"
+exec = echo "$(head -1 ~/todo)"
 exec-if = test -f $HOME/todo
 click-right = head -1 $HOME/todo >> $HOME/done && tail -n +2 $HOME/todo | sponge $HOME/todo
 click-left = neovide-kbd-fix --multiGrid ~/todo
@@ -68,7 +70,7 @@ format = pomodoro <label>
 type = custom/script
 interval = 0.25
 # exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
-exec = [[ $(playerctl --player=vlc,mpv status 2>&1) = "Playing" ]] && playerctl metadata --format="{{artist}} — {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
+exec = [[ $(playerctl --player=vlc,mpv status 2>&1) = "Playing" ]] && playerctl metadata --format="%{T3}{{artist}}%{T-} {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
 click-right = echo "" > ~/.config/polybar/spotify-metadata.txt
 format = <label>
 
