--- a/.config/i3/config
+++ b/.config/i3/config
@@ -277,7 +277,7 @@ bindsym $mod+ctrl+Scroll_Lock exec spt pb --repeat
 bindsym $mod+z exec rofi -show file-browser -matching fuzzy
 
 # Launch rofi bitwarden
-bindsym $mod+p exec bwmenu
+bindsym $mod+p exec rofi-rbw
 
 # Launch rofi clipboard manager
 bindsym $mod+Shift+ugrave exec CM_LAUNCHER=rofi clipmenu
