qute: change UI font to Victor Mono

--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -26,3 +26,7 @@ settings:
     https://mail.ewen.works: true
     https://messages.google.com: true
     https://www.reddit.com: false
+  fonts.default_family:
+    global: Victor Mono
+  fonts.default_size:
+    global: 9.5pt
