picom: disable shadows

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -31,7 +31,7 @@ blur-size = 75;
 vsync = true
 
 # Shadows
-shadow = true;
+shadow = false;
 # no-dnd-shadow = true; # DEPRECATED
 # no-dock-shadow = true; # DEPRECATED
 # clear-shadow = false; # ON BY DEFAULT NOW (DEPRECATED)
