--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -3,9 +3,10 @@ monitor = ${env:MONITOR:}
 background = #00000000
 foreground = ${env:COLOR_PRIM:#FFF}
 font-0 = Victor Mono:size=11;0
-font-1 = unifont:fontformat=truetype:size=13;0
+font-1 = unifont:fontformat=%{T3}truetype%{T-}:size=13;0
 font-2 = Victor Mono:size=11:weight=bold;0
-height = 30
+font-3 = Victor Mono:size=11:style=Italic;0
+height = 25
 padding = 2
 module-margin = 2
 
@@ -13,25 +14,25 @@ module-margin = 2
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
-modules-right = network bluetooth audio backlight battery
+modules-right = network audio backlight battery
 ; tray-position = left
 
 [bar/bottom]
 inherit = section/bar-base
 bottom = true
 ; tray-position = right
-modules-right = cpu ram consumption stamina
+modules-right = disk cpu ram consumption stamina
 modules-center = todo
 modules-left = pomodoro spotify 
 
 [module/font]
 type=custom/script
-format=fnt <label>
+format=%{T3}fnt%{T-} <label>
 exec=cat $HOME/.config/current_font_family
 
 [module/bluetooth]
 type=custom/script
-format=blu <label>
+format=%{T3}blu%{T-} <label>
 exec= bluetoothctl devices | head -1 | sd 'Device (\w\w:){5}\w\w ' '' || echo none
 click-left = bluetoothctl connect 5C:EB:68:4A:3E:CA
 click-right= bluetoothctl disconnect
@@ -39,7 +40,7 @@ click-right= bluetoothctl disconnect
 [module/colorscheme]
 type = custom/script
 interval = 1
-format = thm <label>
+format = %{T3}thm%{T-} <label>
 exec = cat $HOME/.config/current_color_scheme
 
 [module/todo]
@@ -56,7 +57,7 @@ click-middle = $HOME/sync-todos
 [module/temperature]
 type = internal/temperature
 interval = 5
-label = temp %temperature-c%
+label = %{T3}temp%{T-} %temperature-c%
 
 [module/pomodoro]
 type = custom/script
@@ -64,7 +65,7 @@ interval = 0.25
 exec = cat $HOME/.cache/pomodoro-state.txt
 exec-if = test -f $HOME/.cache/pomodoro-state.txt && pgrep --full pomodoro
 click-right = kill $(pgrep --full pomodoro); rm $HOME/.cache/pomodoro-state.txt
-format = pomodoro <label>
+format = %{T3}pomodoro%{T-} <label>
 
 [module/spotify]
 type = custom/script
@@ -89,10 +90,16 @@ exec = "echo '>>>>'"
 [module/cpu]
 type = internal/cpu
 interval = 5
-label = cpu %percentage%%
+label = %{T3}cpu%{T-} %percentage%%
+
+[module/disk]
+type = internal/fs
+interval = 5
+mount-0 = /
+label-mounted = %{T3}sto%{T-} %free%
 
 [module/ram]
-label = ram %gb_free% available
+label = %{T3}ram%{T-} %gb_free% 
 type = internal/memory
 
 [module/i3]
@@ -101,15 +108,15 @@ type = internal/i3
 format = <label-state>
 
 ws-icon-0  = 1;main
-ws-icon-1  = 2;brws
+ws-icon-1  = 2;web
 ws-icon-2  = 3;code
-ws-icon-3  = 4;term
-ws-icon-4  = 5;phys
-ws-icon-5  = 6;math
-ws-icon-6  = 7;conf
+ws-icon-3  = 4;background
+ws-icon-4  = 5;???
+ws-icon-5  = 6;???
+ws-icon-6  = 7;ricing
 ws-icon-7  = 8;mail
-ws-icon-8  = 9;spot
-ws-icon-9  = 10;disc
+ws-icon-8  = 9;music
+ws-icon-9  = 10;chat
 ; ws-icon-0  = 1;一
 ; ws-icon-1  = 2;二
 ; ws-icon-2  = 3;三
@@ -122,10 +129,10 @@ ws-icon-9  = 10;disc
 ; ws-icon-9  = 10;十
 ; ws-icon-default = 〇
 
-label-visible = "(%icon%) "
-label-focused = "[%icon%] "
-label-unfocused = " %icon%  "
-label-urgent = " %icon%  "
+label-visible = "%{T4}%icon%%{T-}  "
+label-focused = "%{T3}%icon%%{T-}  "
+label-unfocused = "%icon%  "
+label-urgent = "%icon%  "
 
 [module/date]
 type = custom/script
@@ -145,8 +152,8 @@ adapter = AC0
 format-charging = <label-charging>
 format-discharging = <label-discharging>
 label-full = [FULL}
-label-charging = [%percentage:3%}+
-label-discharging =[%percentage:3%}
+label-charging = [%{T3}%percentage:3%%{T-}}+
+label-discharging =[%{T3}%percentage:3%%{T-}}
 
 [module/consumption]
 type = internal/battery
@@ -155,7 +162,7 @@ battery = BAT0
 adapter = AC0
 
 format-charging = 
-format-discharging = consuming <label-discharging>
+format-discharging = %{T3}consuming%{T-} <label-discharging>
 label-discharging = %consumption% W
 label-full = 
 
@@ -166,7 +173,7 @@ battery = BAT0
 adapter = AC0
 
 format-charging = 
-format-discharging = <label-discharging> 'til shutdown
+format-discharging = %{T3}dead in%{T-} <label-discharging> 
 label-discharging = %time%
 label-full = 
 
@@ -174,14 +181,14 @@ label-full =
 type = internal/network
 interface = ${env:INTERFACE:wl0}
 
-format-connected = %{A1:kitty nmtui-connect:}net <label-connected>%{A}
+format-connected = %{A1:kitty nmtui-connect:}%{T3}net%{T-} <label-connected>%{A}
 format-disconnected = %{A1:kitty nmtui-connect:}net off%{A}
 label-connected = %downspeed% @ %essid%
 
 [module/audio]
 type = internal/pulseaudio
 
-format-volume = snd <label-volume>
+format-volume = %{T3}snd%{T-} <label-volume>
 format-muted = snd off
 
 click-right = pavucontrol
@@ -214,10 +221,10 @@ ramp-volume-20 =  20
 
 [module/keyboard]
 type = internal/xkeyboard
-label-layout = kbd %layout%
+label-layout = %{T3}kbd%{T-} %layout%
 
 [module/backlight]
 type = internal/backlight
 card = intel_backlight
 enable-scroll = false
-label = lum %percentage%
+label = %{T3}lum%{T-} %percentage%
