--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -109,7 +109,7 @@ format = <label-state>
 
 ws-icon-0  = 1;main
 ws-icon-1  = 2;web
-ws-icon-2  = 3;code
+ws-icon-2  = 3;result
 ws-icon-3  = 4;background
 ws-icon-4  = 5;???
 ws-icon-5  = 6;???
