polybar: add weekday to date

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -136,7 +136,7 @@ label-urgent = "%icon%  "
 
 [module/date]
 type = custom/script
-exec = date +"%H:%M:%S  %Y-%m-%d"
+exec = date +"%H:%M:%S  %Y-%m-%d  %a"
 interval = 1
 click-right = qutebrowser !gcal
 
