--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -156,4 +156,5 @@
   "typescript.inlayHints.propertyDeclarationTypes.enabled": true,
   "editor.fontSize": 13,
   "debug.console.fontSize": 13
+  "editor.inlineSuggest.enabled": true,
 }
