vscode: disable redhat telemetry

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -156,6 +156,7 @@
   "typescript.inlayHints.propertyDeclarationTypes.enabled": true,
   "editor.fontSize": 13,
   "debug.console.fontSize": 13
+  "redhat.telemetry.enabled": false,
   "editor.inlineSuggest.enabled": true,
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
