--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,8 +44,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec kitty
-# the cooler ~~daniel~~ terminal
-bindsym $mod+Shift+Return exec cool-retro-term
+# one-shot execute command (Win+R be like)
+bindsym $mod+Shift+Return exec $HOME/.config/rofi/run
 # start a browser
 bindsym $mod+b exec --no-startup-id qutebrowser
 # start an alternative browser
