--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -14,16 +14,17 @@ module-margin = 2
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
-modules-right = network audio backlight battery
+modules-right = network bluetooth audio backlight battery
 ; tray-position = left
 
 [bar/bottom]
 inherit = section/bar-base
 bottom = true
-; tray-position = right
+tray-position = center
 modules-right = disk cpu ram consumption stamina
-modules-center = todo
-modules-left = pomodoro spotify 
+modules-center = pomodoro
+; modules-left = spt spotify 
+modules-left = spotify
 
 [module/font]
 type=custom/script
@@ -31,11 +32,11 @@ format=%{T3}fnt%{T-} <label>
 exec=cat $HOME/.config/current_font_family
 
 [module/bluetooth]
-type=custom/script
-format=%{T3}blu%{T-} <label>
-exec= bluetoothctl devices | head -1 | sd 'Device (\w\w:){5}\w\w ' '' || echo none
-click-left = bluetoothctl connect 5C:EB:68:4A:3E:CA
-click-right= bluetoothctl disconnect
+type = custom/script
+format = %{T3}blu%{T-} <label>
+exec = $HOME/.config/polybar/bluetooth
+tail = true
+click-left = $HOME/.config/polybar/bluetooth --toggle &
 
 [module/colorscheme]
 type = custom/script
@@ -71,9 +72,14 @@ format = %{T3}pomodoro%{T-} <label>
 type = custom/script
 interval = 0.25
 # exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
-exec = [[ $(playerctl --player=vlc,mpv status 2>&1) = "Playing" ]] && playerctl metadata --format="%{T3}{{artist}}%{T-} {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
+exec = [[ $(playerctl --player=vlc,mpv,spotifyd status 2>&1) = "Playing" ]] && playerctl metadata --format="%{T3}{{artist}}%{T-} {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
 click-right = echo "" > ~/.config/polybar/spotify-metadata.txt
 format = <label>
+
+[module/spt]
+type = custom/script
+interval = 1
+exec = $HOME/.config/polybar/playback-from-spt
 
 [module/play-prev]
 type = custom/script
