polybar: set workspace 5 as git

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -117,7 +117,7 @@ ws-icon-0  = 1;main
 ws-icon-1  = 2;web
 ws-icon-2  = 3;result
 ws-icon-3  = 4;reference
-ws-icon-4  = 5;???
+ws-icon-4  = 5;git
 ws-icon-5  = 6;background
 ws-icon-6  = 7;ricing
 ws-icon-7  = 8;mail
