--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -2,6 +2,7 @@ opacity-rule = [
   "75:class_g = 'discord'",
   "80:class_g = 'kitty'",
   "80:class_g = 'neovide-kbd-fix'",
+  "80:class_g = 'obsidian'",
   "80:class_g = 'Thunar'",
   "85:class_g = 'VSCodium'",
   "80:class_g = 'Code'",
