--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -164,7 +164,7 @@
   },
   "github.copilot.enable": {
     "*": true,
-    "yaml": false,
+    "yaml": true,
     "plaintext": false,
     "markdown": false
   },
