polybar: disable tray

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,7 +20,7 @@ modules-right = network bluetooth audio backlight battery
 [bar/bottom]
 inherit = section/bar-base
 bottom = true
-tray-position = center
+; tray-position = center
 modules-right = disk cpu ram consumption stamina
 modules-center = pomodoro
 ; modules-left = spt spotify 
