vscode: don't peek when multiple definitions are available

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -186,4 +186,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "editor.gotoLocation.multipleDefinitions": "goto",
+  "editor.gotoLocation.multipleTypeDefinitions": "goto"
 }
