polybar: spotify: fix double ", use nerdfonts icons
.

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -4,10 +4,10 @@ background = #00000000
 foreground = ${env:COLOR_PRIM:#FFF}
 font-0 = Victor Mono:size=11;0
 font-1 = unifont:fontformat=%{T3}truetype%{T-}:size=13;0
-font-2 = Victor Mono:size=11:weight=bold;0
-font-3 = Victor Mono:size=11:style=Italic;0
 height = 25
 padding = 1
+font-2 = VictorMono Nerd Font:size=11:weight=bold;0
+font-3 = VictorMono Nerd Font:size=11:style=Italic;0
 module-margin = 2
 
 [bar/top]
