polybar: much more minimal
maybe only for laptop?

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,7 +1,8 @@
 [section/bar-base]
+enable-ipc = true
 monitor = ${env:MONITOR:}
-background = #00000000
-foreground = ${env:COLOR_PRIM:#FFF}
+background = ${env:BG:#000}
+foreground = ${env:FG:#FFF}
 font-0 = Victor Mono:size=11;0
 font-1 = unifont:fontformat=%{T3}truetype%{T-}:size=13;0
 height = 25
@@ -14,17 +15,17 @@ module-margin = 2
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
-modules-right = network bluetooth audio backlight battery
+modules-right = network audio battery
 ; tray-position = left
 
 [bar/bottom]
 inherit = section/bar-base
 bottom = true
 ; tray-position = center
-modules-right = disk cpu ram consumption stamina
-modules-center = pomodoro
+modules-right = consumption stamina
+modules-center = spotify
 ; modules-left = spt spotify 
-modules-left = spotify
+; modules-left = spotify
 
 [module/font]
 type=custom/script
@@ -142,7 +143,8 @@ label-urgent = "%icon%  "
 
 [module/date]
 type = custom/script
-exec = date +"%H:%M:%S  %Y-%m-%d  %a"
+; exec = date +"%H:%M:%S  %Y-%m-%d  %a"
+exec = date +"%H:%M %A %d"
 interval = 1
 click-right = qutebrowser !gcal
 
@@ -155,8 +157,13 @@ type = internal/battery
 battery = BAT0
 adapter = AC0
 
+low-at = 15
+
 format-charging = <label-charging>
 format-discharging = <label-discharging>
+format-low = %{F#F80}<label-low>%{F-}
+format-full = %{F#0F8}<label-full>%{F-}
+label-low = [%{T3}%percentage:3%%{T-}}
 label-full = [FULL}
 label-charging = [%{T3}%percentage:3%%{T-}}+
 label-discharging =[%{T3}%percentage:3%%{T-}}
@@ -168,7 +175,7 @@ battery = BAT0
 adapter = AC0
 
 format-charging = 
-format-discharging = %{T3}consuming%{T-} <label-discharging>
+format-discharging = %{T3}using%{T-} <label-discharging>
 label-discharging = %consumption% W
 label-full = 
 
@@ -178,24 +185,30 @@ type = internal/battery
 battery = BAT0
 adapter = AC0
 
-format-charging = 
+time-format = %Hh %M
+format-charging = %{T3}full in%{T-} <label-charging>
 format-discharging = %{T3}dead in%{T-} <label-discharging> 
 label-discharging = %time%
+label-charging = %time%
 label-full = 
 
 [module/network]
 type = internal/network
 interface = ${env:INTERFACE:wl0}
 
-format-connected = %{A1:kitty nmtui-connect:}%{T3}net%{T-} <label-connected>%{A}
-format-disconnected = %{A1:kitty nmtui-connect:}net off%{A}
-label-connected = %downspeed% @ %essid%
+; format-connected = %{A1:kitty nmtui-connect:}%{T3}net%{T-} <label-connected>%{A}
+; format-disconnected = %{A1:kitty nmtui-connect:}net off%{A}
+format-connected = %{A1:kitty nmtui-connect:}<label-connected>%{A}
+format-disconnected = %{A1:kitty nmtui-connect:}offline%{A}
+; label-connected = %netspeed% @ %essid%
+label-connected = %netspeed%
 
 [module/audio]
 type = internal/pulseaudio
 
-format-volume = %{T3}snd%{T-} <label-volume>
-format-muted = snd off
+; format-volume = %{T3}snd%{T-} <label-volume>
+format-volume = <label-volume>
+format-muted = muted
 
 click-right = pavucontrol
 
