polybar: use Product Sans, among other things
.

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,15 +1,19 @@
 [section/bar-base]
 enable-ipc = true
 monitor = ${env:MONITOR:}
-background = ${env:BG:#000}
+background = #0000
 foreground = ${env:FG:#FFF}
-font-0 = Victor Mono:size=11;0
+; font-0 = Victor Mono:size=11;0
+font-0 = Product Sans:size=14;0
 font-1 = unifont:fontformat=%{T3}truetype%{T-}:size=13;0
-height = 25
-padding = 1
-font-2 = VictorMono Nerd Font:size=11:weight=bold;0
-font-3 = VictorMono Nerd Font:size=11:style=Italic;0
-module-margin = 2
+height = 50
+padding = 5
+; font-2 = VictorMono Nerd Font:size=11:weight=bold;0
+font-2 = Product Sans:style=Bold:size=14;0
+; font-3 = VictorMono Nerd Font:size=11:style=Italic;0
+font-3 = Product Sans:style=Italic:size=14;0
+font-4 = VictorMono Nerd Font:size=12;0
+module-margin = 5
 
 [bar/top]
 inherit = section/bar-base
@@ -144,7 +148,7 @@ label-urgent = "%icon%  "
 [module/date]
 type = custom/script
 ; exec = date +"%H:%M:%S  %Y-%m-%d  %a"
-exec = date +"%H:%M %A %d"
+exec = date +"%%{T3}%H:%M%%{T-}  %A %d"
 interval = 1
 click-right = qutebrowser !gcal
 
@@ -163,10 +167,10 @@ format-charging = <label-charging>
 format-discharging = <label-discharging>
 format-low = %{F#F80}<label-low>%{F-}
 format-full = %{F#0F8}<label-full>%{F-}
-label-low = [%{T3}%percentage:3%%{T-}}
-label-full = [FULL}
-label-charging = [%{T3}%percentage:3%%{T-}}+
-label-discharging =[%{T3}%percentage:3%%{T-}}
+label-low = %{T3}%percentage:3%%{T-}%
+label-full = full
+label-charging = %{T3}%percentage:3%%{T-}%
+label-discharging = %{T3}%percentage:3%%{T-}%
 
 [module/consumption]
 type = internal/battery
@@ -185,7 +189,7 @@ type = internal/battery
 battery = BAT0
 adapter = AC0
 
-time-format = %Hh %M
+time-format = %_Hh %_M
 format-charging = %{T3}full in%{T-} <label-charging>
 format-discharging = %{T3}dead in%{T-} <label-discharging> 
 label-discharging = %time%
