polybar: add lyrics

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,13 +23,14 @@ modules-right = network audio battery
 ; tray-position = left
 
 [bar/bottom]
+foreground = #FFF
 inherit = section/bar-base
 bottom = true
 ; tray-position = center
 modules-right = consumption stamina
-modules-center = spotify
+modules-center = lyrics
 ; modules-left = spt spotify 
-; modules-left = spotify
+modules-left = spotify
 
 [module/font]
 type=custom/script
@@ -77,8 +78,14 @@ format = %{T3}pomodoro%{T-} <label>
 type = custom/script
 interval = 0.25
 # exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
-exec = [[ $(playerctl --player=vlc,mpv,spotifyd status 2>&1) = "Playing" ]] && playerctl metadata --format="%{T3}{{artist}}%{T-} {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
+exec = [[ $(playerctl --player=vlc,mpv,spotifyd status 2>&1) = "Playing" ]] && playerctl metadata --format="%{T3}{{artist}}%{T-} {{title}}" || head -1 ~/.config/polybar/spotify-metadata.txt
 click-right = echo "" > ~/.config/polybar/spotify-metadata.txt
+format = <label>
+
+[module/lyrics]
+type = custom/script
+interval = 0.125
+exec = tail -1 ~/.config/polybar/spotify-metadata.txt
 format = <label>
 
 [module/spt]
@@ -140,10 +147,10 @@ ws-icon-9  = 10;chat
 ; ws-icon-9  = 10;十
 ; ws-icon-default = 〇
 
-label-visible = "%{T4}%icon%%{T-}  "
-label-focused = "%{T3}%icon%%{T-}  "
-label-unfocused = "%icon%  "
-label-urgent = "%icon%  "
+label-visible = "%{T4}%icon%%{T-}     "
+label-focused = "%{T3}%icon%%{T-}     "
+label-unfocused = "%icon%     "
+label-urgent = "%icon%     "
 
 [module/date]
 type = custom/script
