polybar: reintroduce bluetooth module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,7 +19,7 @@ module-margin = 5
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
-modules-right = network audio battery
+modules-right = network bluetooth audio battery
 ; tray-position = left
 
 [bar/bottom]
@@ -39,7 +39,7 @@ exec=cat $HOME/.config/current_font_family
 
 [module/bluetooth]
 type = custom/script
-format = %{T3}blu%{T-} <label>
+format = <label>
 exec = $HOME/.config/polybar/bluetooth
 tail = true
 click-left = $HOME/.config/polybar/bluetooth --toggle &
