--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -8,6 +8,7 @@ opacity-rule = [
   "80:class_g = 'Code'",
   "85:class_g = 'Spotify'",
   "90:class_g = 'firefox'",
+  "70:class_g = 'Zathura'",
   "85:class_g = 'Brave-browser'",
   "80:class_g = 'qutebrowser'",
   "85:class_g = 'GitKraken'",
