picom: don't round corners of polybar

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -49,6 +49,7 @@ wintypes:
 }
 
 corner-radius = 7;
+rounded-corners-exclude = [ "class_g = 'Polybar'" ]
 
 size-transition = false;
 transition-length = 500;
