i3: add keybindings for scratchpad

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -312,6 +312,10 @@ exec --no-startup-id scream -o pulse -i virbr0
 # WARNING: **DON'T** use exec_always, or we'll get an infinite loop, since switch-color-theme reloads i3!!!
 exec --no-startup-id fish -c "switch-color-scheme auto"
 
+# scratchpad !
+bindsym $mod+shift+equal move scratchpad
+bindsym $mod+equal scratchpad show
+
 assign [class="ortfo"] $ws3
 assign [class="gui"] $ws3
 assign [class="Gui"] $ws3
