--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -6,6 +6,8 @@ opacity-rule = [
   "80:class_g = 'Thunar'",
   "85:class_g = 'VSCodium'",
   "80:class_g = 'Code'",
+  "80:class_g = 'Backend'",
+  "80:class_g = 'Ortfo'",
   "85:class_g = 'Spotify'",
   "90:class_g = 'firefox'",
   "70:class_g = 'Zathura'",
