vscode: set dark theme to Moonlight II Italic

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,8 +9,8 @@
   "terminal.integrated.shell.windows": "C:\\Windows\\System32\\wsl.exe",
   "window.autoDetectColorScheme": true,
   "workbench.preferredLightColorTheme": "Snazzy Light",
-  "workbench.preferredDarkColorTheme": "Palenight Italic",
   "workbench.colorTheme": "Palenight Italic",
+  "workbench.preferredDarkColorTheme": "Moonlight II Italic",
   "i18n-ally.displayLanguage": "fr",
   "editor.renderWhitespace": "none",
   "svelte-autoimport.useSemiColon": false,
