vscode: disable bracket pair colorization

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -188,4 +188,5 @@
   },
   "editor.gotoLocation.multipleDefinitions": "goto",
   "editor.gotoLocation.multipleTypeDefinitions": "goto"
+  "editor.bracketPairColorization.enabled": false,
 }
