lazygit: don't ask to return after subprocess ends

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -6,6 +6,7 @@ git:
   paging:
     colorArg: always
     pager: delta --paging=never
+promptToReturnFromSubprocess: false
 customCommands:
   - key: g
     context: files
